--- a/premedia/edetailers/scss/animations.scss
+++ b/premedia/edetailers/scss/animations.scss
@@ -19,14 +19,10 @@
 }
 
 @include keyframes(slide-in-up) {
-	0% {
-		opacity: 0;
+	from {
 		transform: translateY(100vh);
 	}
-	1% {
-		opacity: 1;
-	}
-	100% {
+	to {
 		transform: translateY(0);
 	}
 }
