--- a/premedia/edetailers/scss/sections/services.scss
+++ b/premedia/edetailers/scss/sections/services.scss
@@ -3,6 +3,8 @@
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center center;
+	-webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+	clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
 	.column {
 		margin-left: .5em;
 		margin-right: .5em;
