make vh constant for mobile devices

--- a/premedia/edetailers/scss/navbar.scss
+++ b/premedia/edetailers/scss/navbar.scss
@@ -15,6 +15,7 @@ nav {
 
 		.left .nav-logo img {
 			height: 2.75em;
+			-webkit-transition: filter .1s $easeInOut;
 			transition: filter .1s $easeInOut;
 			transition-delay: .4s;
 		}
