--- a/premedia/edetailers/css/style.css
+++ b/premedia/edetailers/css/style.css
@@ -156,6 +156,7 @@ nav {
     align-items: center; }
     nav .nav-container .left .nav-logo img {
       height: 2.75em;
+      -webkit-transition: filter 0.1s cubic-bezier(0.25, 0.46, 0.45, 0.94);
       transition: filter 0.1s cubic-bezier(0.25, 0.46, 0.45, 0.94);
       transition-delay: .4s; }
     nav .nav-container .right .nav-item {
@@ -293,6 +294,7 @@ nav {
     left: 0;
     width: 100vw;
     height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
     display: none;
     align-items: center;
     justify-content: center;
@@ -498,8 +500,8 @@ nav {
   #map h2 {
     color: #3A3A9D; }
   #map .map-container {
-    width: 80vw;
-    height: 80vh;
+    width: 75vw;
+    height: 75vh;
     margin: 0 auto; }
     #map .map-container #jvectormap {
       width: 100%;
@@ -757,6 +759,7 @@ p {
 
 .scroll-snap-container {
   height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   overflow-y: scroll;
   scroll-snap-type: y mandatory; }
   .scroll-snap-container .section {
