--- a/premedia/edetailers/scss/style.scss
+++ b/premedia/edetailers/scss/style.scss
@@ -33,6 +33,7 @@ p {
 
 .scroll-snap-container {
 	height: 100vh;
+	height: calc(var(--vh, 1vh) * 100);
 	overflow-y: scroll;
 	scroll-snap-type: y mandatory;
 	.section {
