--- a/premedia/edetailers/css/style.css
+++ b/premedia/edetailers/css/style.css
@@ -294,7 +294,6 @@ nav {
     left: 0;
     width: 100vw;
     height: 100vh;
-    height: calc(var(--vh, 1vh) * 100);
     display: none;
     align-items: center;
     justify-content: center;
@@ -758,8 +757,7 @@ p {
   line-height: 1.5em; }
 
 .scroll-snap-container {
-  height: 100vh;
-  height: calc(var(--vh, 1vh) * 100);
+  height: calc(var(--vh) * 100);
   overflow-y: scroll;
   scroll-snap-type: y mandatory; }
   .scroll-snap-container .section {
