--- a/premedia/edetailers/scss/style.scss
+++ b/premedia/edetailers/scss/style.scss
@@ -32,8 +32,8 @@ p {
 }
 
 .scroll-snap-container {
-	height: 100vh;
-	height: calc(var(--vh, 1vh) * 100);
+	// height: 100vh;
+	height: calc(var(--vh) * 100);
 	overflow-y: scroll;
 	scroll-snap-type: y mandatory;
 	.section {
