--- a/premedia/edetailers/scss/style.scss
+++ b/premedia/edetailers/scss/style.scss
@@ -37,20 +37,33 @@ p {
 	scroll-snap-type: y mandatory;
 	.section {
 		display: flex;
-		min-height: calc(100vh - 3em);
+		height: calc(100vh - 3em);
 		align-items: center;
 		padding-top: 3em;
 		scroll-snap-align: start;
 	}
 	@include mobile {
 		scroll-snap-type: y proximity;
-		scroll-snap-type: none;
+		// scroll-snap-type: none;
+		
+		.section {
+			height: initial;
+			// min-height: 100vh;
+			padding-top: 4em;
+			align-items: unset;
+			.container {
+				max-width: 24em;
+			}
+			&.animated * {
+				animation: none !important;
+			}
+		}
 	}
 }
 
 .container {
 	max-width: 1024px;
-	padding: 1em 1em;
+	padding: 1em;
 	margin: 0 auto;
 	&.bigger {
 		max-width: 1200px;
@@ -70,6 +83,9 @@ p {
 		width: 100%;
 	}
 	&.no-padding {
+		padding: 0;
+	}
+	@include mobile {
 		padding: 0;
 	}
 }
@@ -117,5 +133,14 @@ p {
 		&:hover, &:focus, &:active {
 			background-color: #DDDEDE;
 		}
+	}
+}
+
+@include mobile {
+	h1 {
+		font-size: 1.7em;
+	}
+	h2, h3 {
+		margin-top: 0;
 	}
 }
