--- a/premedia/edetailers/css/style.css
+++ b/premedia/edetailers/css/style.css
@@ -4,6 +4,9 @@
   flex-wrap: wrap; }
   .grid.column-center .column {
     text-align: center; }
+  @media (max-width: 48em) {
+    .grid {
+      display: block; } }
 
 .column {
   flex: 1; }
@@ -159,19 +162,19 @@ nav {
       -webkit-transition: filter 0.1s cubic-bezier(0.25, 0.46, 0.45, 0.94);
       transition: filter 0.1s cubic-bezier(0.25, 0.46, 0.45, 0.94);
       transition-delay: .4s; }
-    nav .nav-container.dark-bg .left .nav-logo img {
-      filter: brightness(0) invert(1); }
-    nav .nav-container.dark-bg #navigation-menu .nav-item a {
-      color: #fff; }
-    nav .nav-container.dark-bg #navigation-menu .nav-item.active {
-      border-color: #fff; }
-    nav .nav-container.dark-bg #navigation-menu-mobile.right input:checked ~ span {
-      background: #3A3A9D; }
-    nav .nav-container.dark-bg #navigation-menu-mobile.right span {
-      background: white; }
+    @media (min-width: 48em) {
+      nav .nav-container.dark-bg .left .nav-logo img {
+        filter: brightness(0) invert(1); }
+      nav .nav-container.dark-bg #navigation-menu .nav-item a {
+        color: #fff; }
+      nav .nav-container.dark-bg #navigation-menu .nav-item.active {
+        border-color: #fff; } }
     @media (max-width: 48em) {
-      nav .nav-container .left, nav .nav-container .right {
-        padding: 0 0; } }
+      nav .nav-container {
+        background: white;
+        border-bottom: 2px solid #3A3A9D; }
+        nav .nav-container .left, nav .nav-container .right {
+          padding: 0 0; } }
     nav .nav-container #navigation-menu .nav-item {
       display: inline-block;
       margin-left: 1.25em;
@@ -231,8 +234,7 @@ nav {
         margin-bottom: 5px;
         background: #3A3A9D;
         z-index: 5;
-        transition: all 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94);
-        transition-delay: .3s; }
+        transition: all 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94); }
         nav .nav-container #navigation-menu-mobile .hamburger-line:first-of-type {
           transform-origin: 0% 0%; }
         nav .nav-container #navigation-menu-mobile .hamburger-line:last-of-type {
@@ -274,6 +276,9 @@ nav {
     color: #fff; }
     #home .info-panel h1 {
       margin-top: 0; }
+    @media (max-width: 48em) {
+      #home .info-panel {
+        margin: 0; } }
   #home .slide-container {
     text-align: center;
     width: 100%; }
@@ -284,7 +289,7 @@ nav {
       border-image-source: url("../img/slides/slide_frame.png");
       border-image-slice: 30;
       background-color: black;
-      border-radius: 20px;
+      border-radius: 1em;
       box-shadow: 35px 10px 72px -16px rgba(0, 0, 0, 0.44); }
       #home .slide-container .frame-container img {
         background-color: black;
@@ -301,16 +306,28 @@ nav {
   @media (min-width: 48em) {
     #home {
       animation: animate-home-bg 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-      animation-delay: 3s; } }
-  #home .slide-container {
-    animation: fade-in 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-    animation-delay: .5s; }
-  #home .info-panel h1, #home .info-panel p {
-    animation: fade-in 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-    animation-delay: 1.5s; }
-  #home .info-panel .btn {
-    animation: fade-in 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-    animation-delay: 2.5s; }
+      animation-delay: 3s; }
+      #home .slide-container {
+        animation: fade-in 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+        animation-delay: .5s; }
+      #home .info-panel h1, #home .info-panel p {
+        animation: fade-in 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+        animation-delay: 1.5s; }
+      #home .info-panel .btn {
+        animation: fade-in 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+        animation-delay: 2.5s; } }
+  @media (max-width: 48em) {
+    #home .info-panel {
+      margin: 0 auto; }
+      #home .info-panel .btn {
+        margin: 1em 0 2em; }
+    #home .slide-container {
+      padding-top: 1em; }
+      #home .slide-container .frame-container {
+        border-width: 2vw;
+        border-radius: .5em; }
+        #home .slide-container .frame-container img {
+          border-radius: 0; } }
 
 #eDetailers .info-panel {
   margin-right: 1em;
@@ -319,15 +336,18 @@ nav {
   #eDetailers .info-panel h1 {
     margin-top: 0;
     color: #3A3A9D; }
+    @media (min-width: 48em) {
+      #eDetailers .info-panel h1 span:first-of-type {
+        border: none; } }
   #eDetailers .info-panel p:last-of-type {
     margin-bottom: 0; }
 #eDetailers .image-panel {
   display: flex;
   align-items: flex-end; }
-  #eDetailers .image-panel img:nth-of-type(1) {
+  #eDetailers .image-panel img:first-of-type {
     width: calc(60% - 1em);
     padding-right: 1em; }
-  #eDetailers .image-panel img:nth-of-type(2) {
+  #eDetailers .image-panel img:last-of-type {
     width: 40%; }
 #eDetailers .service-panel {
   background-color: #3A3A9D;
@@ -339,39 +359,54 @@ nav {
     margin: 1em auto .25em;
     background-color: #83D0F4;
     border: none; }
-#eDetailers.animated .info-panel {
-  animation: fade-in-left 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-  animation-delay: 0.5s; }
-#eDetailers.animated .image-panel img {
-  animation: fade-in-left 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both; }
-  #eDetailers.animated .image-panel img:nth-of-type(1) {
-    animation-delay: 1.3s; }
-  #eDetailers.animated .image-panel img:nth-of-type(2) {
-    animation-delay: 1.5s; }
-#eDetailers.animated .service-panel {
-  animation: slide-in-up 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-  animation-delay: 2s; }
+@media (max-width: 48em) {
+  #eDetailers .info-panel {
+    margin: 0;
+    padding: 1em; }
+  #eDetailers .image-panel {
+    display: none; }
+  #eDetailers .service-panel {
+    display: flex; }
+    #eDetailers .service-panel .column {
+      flex: 0 50%;
+      padding: 1em 0 .5em; }
+      #eDetailers .service-panel .column hr {
+        width: auto;
+        margin: .75em 3em; } }
+@media (min-width: 48em) {
+  #eDetailers.animated .info-panel {
+    animation: fade-in-left 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+    animation-delay: .5s; }
+  #eDetailers.animated .image-panel img {
+    animation: fade-in-left 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both; }
+    #eDetailers.animated .image-panel img:nth-of-type(1) {
+      animation-delay: 1.3s; }
+    #eDetailers.animated .image-panel img:nth-of-type(2) {
+      animation-delay: 1.5s; }
+  #eDetailers.animated .service-panel {
+    animation: slide-in-up 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+    animation-delay: 2s; } }
 
 #certifications {
   background-color: #EFEFEF;
   position: relative;
-  padding: 0 0 10em; }
+  padding-bottom: 10em; }
   #certifications .section-title {
     margin-bottom: 5em; }
-  #certifications .column {
+  #certifications .desktop-buttons .column {
     width: 33%; }
-    #certifications .column .cert-logo-container {
+    #certifications .desktop-buttons .column .cert-logo-container {
       margin: 1em;
       padding: 7em 0;
       border-radius: 15em;
       cursor: pointer; }
-      #certifications .column .cert-logo-container img {
+      #certifications .desktop-buttons .column .cert-logo-container img {
         max-width: 80%; }
-      #certifications .column .cert-logo-container:hover {
+      #certifications .desktop-buttons .column .cert-logo-container:hover {
         background-color: #ddd; }
-      #certifications .column .cert-logo-container:active, #certifications .column .cert-logo-container.active {
+      #certifications .desktop-buttons .column .cert-logo-container:active, #certifications .desktop-buttons .column .cert-logo-container.active {
         background-color: #3A3A9D; }
-        #certifications .column .cert-logo-container:active img, #certifications .column .cert-logo-container.active img {
+        #certifications .desktop-buttons .column .cert-logo-container:active img, #certifications .desktop-buttons .column .cert-logo-container.active img {
           opacity: 0; }
   #certifications #cert-modal {
     position: absolute;
@@ -444,6 +479,42 @@ nav {
       animation-delay: 1.5s; }
     #certifications.animated .grid .column:nth-of-type(3) {
       animation-delay: 2s; }
+  @media (min-width: 48em) {
+    #certifications .mobile {
+      display: none; } }
+  @media (max-width: 48em) {
+    #certifications {
+      display: block;
+      padding-bottom: 0; }
+      #certifications .desktop {
+        display: none; }
+      #certifications .section-title {
+        padding: 1em 0 0;
+        margin: 0; }
+      #certifications .mobile > div {
+        margin: 0 auto; }
+        #certifications .mobile > div h3 {
+          font-size: 1.3em;
+          color: #3A3A9D; }
+        #certifications .mobile > div .cert-icon-container {
+          text-align: center; }
+          #certifications .mobile > div .cert-icon-container .row {
+            display: flex;
+            justify-content: space-between; }
+            #certifications .mobile > div .cert-icon-container .row img:first-of-type {
+              width: calc(50% - 1em);
+              padding-right: 1em; }
+            #certifications .mobile > div .cert-icon-container .row img {
+              width: 50%; }
+          #certifications .mobile > div .cert-icon-container img {
+            width: 80%;
+            padding: 1em 0; }
+        #certifications .mobile > div hr {
+          height: .1em;
+          width: 4em;
+          margin: 1em auto 2em;
+          background-color: #CCC;
+          border: none; } }
 
 #services {
   background-image: url("../img/service_bg.jpg");
@@ -452,6 +523,10 @@ nav {
   background-position: center center;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
   clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%); }
+  #services .section-title {
+    margin-bottom: 5em; }
+    #services .section-title h2 {
+      color: white; }
   #services .column {
     margin-left: .5em;
     margin-right: .5em; }
@@ -473,9 +548,6 @@ nav {
     margin-bottom: 9em; }
     #services .localisation h3 {
       color: #83D0F4; }
-    #services .localisation p {
-      margin-bottom: 10em;
-      hyphens: auto; }
   #services .translation {
     background-color: #ECEFF0;
     margin-bottom: 11em; }
@@ -486,16 +558,28 @@ nav {
     margin-bottom: 5em; }
     #services .transcreation h3 {
       color: #fff; }
-  #services.animated .column {
-    animation: slide-in-up 0.7s cubic-bezier(0.25, 0.46, 0.45, 0.94) both; }
-    #services.animated .column:nth-of-type(1) {
-      animation-delay: 0.65s; }
-    #services.animated .column:nth-of-type(2) {
-      animation-delay: 0.8s; }
-    #services.animated .column:nth-of-type(3) {
-      animation-delay: 0.95s; }
-    #services.animated .column:nth-of-type(4) {
-      animation-delay: 1.1s; }
+  @media (min-width: 48em) {
+    #services.animated .column {
+      animation: slide-in-up 0.7s cubic-bezier(0.25, 0.46, 0.45, 0.94) both; }
+      #services.animated .column:nth-of-type(1) {
+        animation-delay: 0.65s; }
+      #services.animated .column:nth-of-type(2) {
+        animation-delay: 0.8s; }
+      #services.animated .column:nth-of-type(3) {
+        animation-delay: 0.95s; }
+      #services.animated .column:nth-of-type(4) {
+        animation-delay: 1.1s; } }
+  @media (max-width: 48em) {
+    #services .section-title {
+      margin-bottom: 2em; }
+    #services .development, #services .localisation, #services .translation, #services .transcreation {
+      margin: 1em 0;
+      padding: 1em;
+      border-radius: 5px; }
+      #services .development h3, #services .localisation h3, #services .translation h3, #services .transcreation h3 {
+        margin-bottom: .5em; }
+      #services .development p, #services .localisation p, #services .translation p, #services .transcreation p {
+        margin: 0; } }
 
 #how-we-work .section-title {
   margin-bottom: 2em; }
@@ -848,18 +932,25 @@ p {
   scroll-snap-type: y mandatory; }
   .scroll-snap-container .section {
     display: flex;
-    min-height: calc(100vh - 3em);
+    height: calc(100vh - 3em);
     align-items: center;
     padding-top: 3em;
     scroll-snap-align: start; }
   @media (max-width: 48em) {
     .scroll-snap-container {
-      scroll-snap-type: y proximity;
-      scroll-snap-type: none; } }
+      scroll-snap-type: y proximity; }
+      .scroll-snap-container .section {
+        height: initial;
+        padding-top: 4em;
+        align-items: unset; }
+        .scroll-snap-container .section .container {
+          max-width: 24em; }
+        .scroll-snap-container .section.animated * {
+          animation: none !important; } }
 
 .container {
   max-width: 1024px;
-  padding: 1em 1em;
+  padding: 1em;
   margin: 0 auto; }
   .container.bigger {
     max-width: 1200px; }
@@ -875,6 +966,9 @@ p {
     width: 100%; }
   .column.no-padding {
     padding: 0; }
+  @media (max-width: 48em) {
+    .column {
+      padding: 0; } }
 
 .section-title {
   text-align: center; }
@@ -908,5 +1002,12 @@ p {
     background-color: #83D0F4; }
     .btn.light-blue:hover, .btn.light-blue:focus, .btn.light-blue:active {
       background-color: #DDDEDE; }
+
+@media (max-width: 48em) {
+  h1 {
+    font-size: 1.7em; }
+
+  h2, h3 {
+    margin-top: 0; } }
 
 /*# sourceMappingURL=style.css.map */
