--- a/premedia/edetailers/scss/sections/certifications.scss
+++ b/premedia/edetailers/scss/sections/certifications.scss
@@ -1,30 +1,31 @@
 #certifications {
 	background-color: #EFEFEF;
 	position: relative;
-	padding: 0 0 10em;
+	padding-bottom: 10em;
 	.section-title {
 		margin-bottom: 5em;
 	}
-	.column {
-		width: 33%;
-		.cert-logo-container {
-			margin: 1em;
-			padding: 7em 0;
-			border-radius: 15em;
-			cursor: pointer;
-			img {
-				max-width: 80%;
-			}
-			&:hover {
-				background-color: #ddd;
-			}
-			&:active, &.active {
-				background-color: $darkBlue;
+	.desktop-buttons {
+		.column {
+			width: 33%;
+			.cert-logo-container {
+				margin: 1em;
+				padding: 7em 0;
+				border-radius: 15em;
+				cursor: pointer;
 				img {
-					opacity: 0;
+					max-width: 80%;
+				}
+				&:hover {
+					background-color: #ddd;
+				}
+				&:active, &.active {
+					background-color: $darkBlue;
+					img {
+						opacity: 0;
+					}
 				}
 			}
-
 		}
 	}
 	#cert-modal {
@@ -119,6 +120,58 @@
 			.column {
 				animation: fade-in 1s $easeInOut both;
 				@include staggeredDelays(3, .5, .5);
+			}
+		}
+	}
+	@include bigger-than-mobile {
+		.mobile {
+			display: none;
+		}
+	}
+
+	@include mobile {
+		display: block;
+		padding-bottom: 0;
+		.desktop {
+			display: none;
+		}
+
+		.section-title {
+			padding: 1em 0 0;
+			margin: 0;
+		}
+		.mobile {
+			& > div {
+				margin: 0 auto;
+				h3 {
+					font-size: 1.3em;
+					color: $darkBlue
+				}
+				.cert-icon-container {
+					text-align: center;
+					.row {
+						display: flex;
+						justify-content: space-between;
+						img:first-of-type {
+							width: calc(50% - 1em);
+							padding-right: 1em;
+						}
+						img {
+							width: 50%;
+						}
+					}
+					img {
+						width: 80%;
+						padding: 1em 0;
+					}
+				}
+				hr {
+					height: .1em;
+					width: 4em;
+					margin: 1em auto 2em;
+					background-color: #CCC;
+					border: none;
+				}
 			}
 		}
 	}
