--- a/premedia/edetailers/scss/sections/edetailers.scss
+++ b/premedia/edetailers/scss/sections/edetailers.scss
@@ -6,6 +6,12 @@
 		h1{
 			margin-top: 0;
 			color: $darkBlue;
+			// hide underline of top word on large screens
+			@include bigger-than-mobile {
+				span:first-of-type {
+					border: none;
+				}
+			}
 		}
 		p:last-of-type {
 			margin-bottom: 0;
@@ -15,11 +21,11 @@
 		display: flex;
 		align-items: flex-end;
 		// padding: 1em 0 0 1em;
-		img:nth-of-type(1) {
+		img:first-of-type {
 			width: calc(60% - 1em);
 			padding-right: 1em;
 		}
-		img:nth-of-type(2) {
+		img:last-of-type {
 			width: 40%;
 		}
 	}
@@ -37,19 +43,41 @@
 			}
 		}
 	}
-
-	&.animated {
+	@include mobile {
 		.info-panel {
-			animation: fade-in-left 1s $easeInOut both;
-			animation-delay: .5s
+			margin: 0;
+			padding: 1em;
 		}
-		.image-panel img{
-			animation: fade-in-left 1s $easeInOut both;
-			@include staggeredDelays(2, .2, 1.1);
+		.image-panel {
+			display: none;
 		}
 		.service-panel {
-			animation: slide-in-up 1s $easeInOut both;
-			animation-delay: 2s;
+			display: flex;
+			.column {
+				flex: 0 50%;
+				padding: 1em 0 .5em;
+				hr {
+					width: auto;
+					margin: .75em 3em;
+				}
+			}
+		}
+	}
+
+	@include bigger-than-mobile {
+		&.animated {
+			.info-panel {
+				animation: fade-in-left 1s $easeInOut both;
+				animation-delay: .5s;
+			}
+			.image-panel img {
+				animation: fade-in-left 1s $easeInOut both;
+				@include staggeredDelays(2, .2, 1.1);
+			}
+			.service-panel {
+				animation: slide-in-up 1s $easeInOut both;
+				animation-delay: 2s;
+			}
 		}
 	}
 }
