--- a/premedia/edetailers/scss/sections/home.scss
+++ b/premedia/edetailers/scss/sections/home.scss
@@ -8,6 +8,9 @@
 		h1 {
 			margin-top: 0;
 		}
+		@include mobile {
+			margin: 0;
+		}
 	}
 
 	.slide-container {
@@ -22,7 +25,7 @@
 			border-image-source: url('../img/slides/slide_frame.png');
 			border-image-slice: 30;
 			background-color: black;
-			border-radius: 20px;
+			border-radius: 1em;
 			box-shadow: 35px 10px 72px -16px rgba(0,0,0,0.44);
 
 			img {
@@ -50,21 +53,40 @@
 	@include bigger-than-mobile {
 		animation: animate-home-bg 1s $easeInOut both;
 		animation-delay: 3s;
-	}
 
-	.slide-container {
-		animation: fade-in 1s $easeInOut both;
-		animation-delay: .5s;
-	}
-
-	.info-panel {
-		h1, p {
+		.slide-container {
 			animation: fade-in 1s $easeInOut both;
-			animation-delay: 1.5s;		
+			animation-delay: .5s;
 		}
-		.btn {
-			animation: fade-in 1s $easeInOut both;
-			animation-delay: 2.5s;
+
+		.info-panel {
+			h1, p {
+				animation: fade-in 1s $easeInOut both;
+				animation-delay: 1.5s;		
+			}
+			.btn {
+				animation: fade-in 1s $easeInOut both;
+				animation-delay: 2.5s;
+			}
+		}
+	}
+
+	@include mobile {
+		.info-panel {
+			margin: 0 auto;
+			.btn {
+				margin: 1em 0 2em;
+			}
+		}
+		.slide-container {
+			padding-top: 1em;
+			.frame-container {
+				border-width: 2vw;
+				border-radius: .5em;
+				img {
+					border-radius: 0;
+				}
+			}
 		}
 	}
 }
