--- a/premedia/edetailers/scss/sections/services.scss
+++ b/premedia/edetailers/scss/sections/services.scss
@@ -5,6 +5,12 @@
 	background-position: center center;
 	-webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
 	clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+	.section-title {
+		margin-bottom: 5em;
+		h2 {
+			color: white;
+		}
+	}
 	.column {
 		margin-left: .5em;
 		margin-right: .5em;
@@ -33,10 +39,6 @@
 		h3 {
 			color: $lightBlue;
 		}
-		p {
-			margin-bottom: 10em;
-			hyphens: auto;
-		}
 	}
 	.translation {
 		background-color: #ECEFF0;
@@ -53,10 +55,29 @@
 		}
 	}
 
-	&.animated {
-		.column {
-			animation: slide-in-up .7s $easeInOut both;
-			@include staggeredDelays(4, .15, .5);
+	@include bigger-than-mobile {
+		&.animated {
+			.column {
+				animation: slide-in-up .7s $easeInOut both;
+				@include staggeredDelays(4, .15, .5);
+			}
+		}
+	}
+
+	@include mobile {
+		.section-title {
+			margin-bottom: 2em;
+		}
+		.development, .localisation , .translation, .transcreation {
+			margin: 1em 0;
+			padding: 1em;
+			border-radius: 5px;
+			h3 {
+				margin-bottom: .5em; 
+			}
+			p {
+				margin: 0;
+			}
 		}
 	}
 }
