--- a/premedia/edetailers/scss/sections/about.scss
+++ b/premedia/edetailers/scss/sections/about.scss
@@ -1,10 +1,8 @@
 #about {
-	.column {
-		.info-panel {
-			padding: 1em;
-			background-color: $darkBlue;
-			color: #fff;
-		}
+	.info-panel {
+		padding: 1em;
+		background-color: $darkBlue;
+		color: #fff;
 	}
 	.business-panel {
 		padding-top: 12em;
@@ -32,19 +30,64 @@
 			}
 		}
 	}
-	&.animated {
+	@include mobile {
 		.info-panel {
-			animation: fade-in 1s $easeInOut both;
-			animation-delay: .5s;
+			br {
+				display: none;
+			}
+			p:last-of-type {
+				margin-bottom: 0;
+			}
 		}
 		.business-panel {
-			h3 {
-				animation: fade-in 1s $easeInOut both;
-				animation-delay: 1.5s;
+			padding: 2em 0 0;
+			& > h3 {
+				text-align: center;
 			}
 			.column {
+				display: flex;
+				justify-content: space-between;
+				margin: 1em 0 2em;
+				div.about-icon {
+					width: 30%;
+					height: auto;
+					display: flex;
+					justify-content: center;
+					img {
+						width: 80%;
+						&.bigger {
+							margin-left: 10%;
+							width: 75%;
+						}
+					}
+				}
+				div:last-of-type {
+					width: 65%;
+				}
+				&, &:first-of-type, &:last-of-type {
+					padding: 0;
+				}
+				h3, p {
+					margin: 0;
+				}
+			}
+		}
+	}
+	@include bigger-than-mobile {
+		&.animated {
+			.info-panel {
 				animation: fade-in 1s $easeInOut both;
-				@include staggeredDelays(3, .5, 1.5);
+				animation-delay: .5s;
+			}
+			.business-panel {
+				h3 {
+					animation: fade-in 1s $easeInOut both;
+					animation-delay: 1.5s;
+				}
+				.column {
+					animation: fade-in 1s $easeInOut both;
+					@include staggeredDelays(3, .5, 1.5);
+				}
 			}
 		}
 	}
