--- a/premedia/edetailers/scss/sections/certifications.scss
+++ b/premedia/edetailers/scss/sections/certifications.scss
@@ -137,7 +137,7 @@
 		}
 
 		.section-title {
-			padding: 1em 0 0;
+			padding: 0;
 			margin: 0;
 		}
 		.mobile {
@@ -158,6 +158,7 @@
 						}
 						img {
 							width: 50%;
+							max-height: 2em;
 						}
 					}
 					img {
