--- a/premedia/edetailers/scss/sections/edetailers.scss
+++ b/premedia/edetailers/scss/sections/edetailers.scss
@@ -49,7 +49,18 @@
 			padding: 1em;
 		}
 		.image-panel {
-			display: none;
+			position: relative;
+			overflow: hidden;
+			height: 12em;
+			margin-top: 1em;
+			img:first-of-type {
+				display: none;
+			}
+			img:last-of-type {
+				position: absolute;
+				width: 100%;
+				bottom: 0;
+			}
 		}
 		.service-panel {
 			display: flex;
