--- a/premedia/edetailers/scss/sections/map.scss
+++ b/premedia/edetailers/scss/sections/map.scss
@@ -14,10 +14,19 @@
 		}
 	}
 
-	&.animated {
-		.jvectormap-marker {
-			animation: fade-in .2s $easeInOut both;
-			@include staggeredDelays(20, .2, .5);
+	@include bigger-than-mobile {
+		&.animated {
+			.jvectormap-marker {
+				animation: fade-in .2s $easeInOut both;
+				@include staggeredDelays(20, .2, .5);
+			}
+		}
+	}
+	@include mobile {
+		// min-height: 100vh;
+		.map-container {
+			width: 100%;
+			height: 50vh;
 		}
 	}
 }
