content changes, ie/edge scrollsnap hotfix

--- a/premedia/edetailers/scss/style.scss
+++ b/premedia/edetailers/scss/style.scss
@@ -35,6 +35,7 @@ p {
 .scroll-snap-container {
 	height: 100vh;
 	overflow-y: auto;
+	-ms-scroll-snap-type: y mandatory;
 	scroll-snap-type: y mandatory;
 	.section {
 		display: flex;
@@ -45,6 +46,7 @@ p {
 	}
 	@include mobile {
 		// scroll-snap-type: y proximity;
+		-ms-scroll-snap-type: none;
 		scroll-snap-type: none;
 		
 		.section {
