--- a/premedia/edetailers/css/style.css
+++ b/premedia/edetailers/css/style.css
@@ -469,7 +469,8 @@ nav {
         top: -3.25em;
         right: -2.5em;
         color: #FFF;
-        cursor: pointer; }
+        cursor: pointer;
+        z-index: 10; }
         #certifications #cert-modal .modal-content .close-btn span {
           font-size: 3em; }
         #certifications #cert-modal .modal-content .close-btn:hover {
@@ -1029,7 +1030,6 @@ nav {
       display: none; } }
 
 .copyright {
-  background-color: #3A3A9D;
   text-align: center;
   position: absolute;
   width: 100%;
@@ -1054,6 +1054,7 @@ p {
 .scroll-snap-container {
   height: 100vh;
   overflow-y: auto;
+  -ms-scroll-snap-type: y mandatory;
   scroll-snap-type: y mandatory; }
   .scroll-snap-container .section {
     display: flex;
@@ -1063,6 +1064,7 @@ p {
     scroll-snap-align: start; }
   @media (max-width: 768px) {
     .scroll-snap-container {
+      -ms-scroll-snap-type: none;
       scroll-snap-type: none; }
       .scroll-snap-container .section {
         height: initial;
